# matrix

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MATRIX.md  MATRIX_Iloilo_Data_Sources.md  README.md  SECURITY.md  Template.docx
.claude/: launch.json
.claude/agents/: data-pipeline-runner.md  eval-test-runner.md  frontend-3d-builder.md  glass-box-auditor.md  module-kernel-builder.md
.github/workflows/: ci.yml
app/: .env.example  .gitignore  AGENTS.md  Dockerfile.api  README.md  docker-compose.yml  fly.toml
app/apps/api/: pyproject.toml  ws_smoke.py
app/apps/api/matrix_api/: __init__.py  auth.py  db.py  main.py  runtime.py
app/apps/api/tests/: test_auth.py  test_auth_unit.py  test_persistence.py  test_runtime_hardening.py  test_runtime_unit.py  test_ws_stream.py
app/apps/web/: SCAFFOLD.md  package-lock.json  package.json  vercel.json  vitest.config.ts
data/: .gitignore  INVENTORY.md  READINESS.md  README.md
data/fetch/: .env.example  fetch_economic.py  fetch_geo.py  fetch_open.ps1  fetch_open.py  parse_bir_zonal.py  scrape_lptrp.py  subset_iloilo.py
data/outreach/: CPDO-Request-Letter.docx  clean-air-asia-smmr.md  lipad-dtm-request.md  ltfrb-vi-foi.md  psa-cbms-request.md
data/processed/cchain_iloilo/: README.md  brgy_geography.csv  calendar.csv  climate_indices.csv  disease.csv  disease_fhsis_totals.csv  disease_lgu_disaggregated_totals.csv  disease_pidsr_totals.csv  esa_worldcover.csv  (+17 more)
docs/: aaih-ai-use-ethics-report.md  build-matrix.md  clr-matrix.md  dsd-matrix.md  gtm-matrix.md  implementation-plan-critical-path.md  implementation-plan-matrix.md  index.md  methods-matrix.md  ops-matrix.md  prd-matrix.md  qad-matrix.md  rfc-matrix-realtime-pipeline.md  sad-matrix.md  sdd-matrix.md
presentation/: CONTENT-OUTLINE.md  DESIGN-NOTES.md  README.md  walkthrough.md
presentation/assets/: README.md
presentation/deck/: index.html  styles.css
presentation/scripts/: capture-shots.mjs  export-pdf.mjs
reference/: PUP-ATLAN_TECHNICAL ROADMAP TEMPLATE _ AAIH 2026.md  TECHNICAL ROADMAP TEMPLATE _ AAIH 2026.md
scripts/: run_eval.py  seed_reference_scenarios.py
(+46 files in other folders)
