[project]
name = "matrix-api"
version = "0.1.0"
description = "MATRIX FastAPI + WebSocket gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "pydantic",
    # Orchestrator + synthesis (Gemini 3.1 Pro). VERIFY against ai.google.dev
    # before wiring (build-matrix.md §3). Never Gemini 1.5/2.0.
    "google-genai",
    # matrix-kernel is consumed as a path/workspace dependency -- wire at Phase 4.
    "matrix-kernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matrix_api"]

[tool.uv.sources]
matrix-kernel = { path = "../../packages/kernel", editable = true }
